# himalaya

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt  main.cpp
app/include/himalaya/app/: application.h  blue_noise_data.h  camera_controller.h  config.h  debug_ui.h  renderer.h  scene_loader.h  sobol_direction_data.h
app/src/: application.cpp  camera_controller.cpp  config.cpp  debug_ui.cpp  main.cpp  renderer.cpp  renderer_bake.cpp  renderer_init.cpp  renderer_pt.cpp  renderer_rasterization.cpp  scene_loader.cpp
assets/Sponza_Intel/: credits_license.txt
docs/: agent-context.md  architecture.md  current-phase.md  m1-architecture-choices.md  m1-directory-structure.md  m1-phase1-plan.md  technical-decisions.md
docs/archive/: contact-shadows-reference.md  gtao-reference.md  m1-phase1-decisions.md  m1-phase2-decisions.md  m1-phase3-decisions.md  m1-phase3-plan.md  m1-phase4-decisions.md  m1-phase5-decisions.md  m1-phase6-plan.md  m1-phase7-plan.md  path-tracing-reference.md  pcss-reference.md
docs/final-project/: 00-overview.md  01-cascaded-shadow-maps.md  02-ssao.md  03-indirect-lighting.md  04-transparency-refraction.md
docs/milestone-1/: m1-design-decisions-core.md  m1-design-decisions.md  m1-development-order.md  m1-frame-flow.md  m1-interfaces.md  m1-phase-future-decisions.md  m1-phase3-decisions.md  m1-phase3-open-questions.md  m1-phase5-decisions.md  m1-rt-decisions.md  milestone-1.md
docs/project/: architecture.md  decision-process.md  requirements-and-philosophy.md  technical-decisions.md
docs/roadmap/: milestone-2.md  milestone-3.md  milestone-future.md
framework/: CMakeLists.txt
framework/include/himalaya/framework/: bake_data_manager.h  bake_denoiser.h  cache.h  cached_shader_compiler.h  camera.h  color_utils.h  cubemap_filter.h  culling.h  denoiser.h  emissive_light_builder.h  frame_context.h  ibl.h  imgui_backend.h  ktx2.h  lightmap_uv.h  lightmap_uv_generator.h  material_system.h  mesh.h  probe_placement.h  render_constants.h  render_graph.h  render_progress.h  scene_as_builder.h  scene_data.h  shadow.h  texture.h  texture_compress.h
framework/src/: bake_data_manager.cpp  bake_denoiser.cpp  cache.cpp  cached_shader_compiler.cpp  camera.cpp  color_utils.cpp  cubemap_filter.cpp  culling.cpp  denoiser.cpp  emissive_light_builder.cpp  ibl.cpp  ibl_compress.cpp  ibl_compute.cpp  imgui_backend.cpp  ktx2.cpp  lightmap_uv.cpp  lightmap_uv_generator.cpp  material_system.cpp  mesh.cpp  probe_placement.cpp  render_graph.cpp  scene_as_builder.cpp  shadow.cpp  stb_impl.cpp  texture.cpp  texture_compress.cpp
passes/: CMakeLists.txt
passes/include/himalaya/passes/: ao_spatial_pass.h  ao_temporal_pass.h  contact_shadows_pass.h  depth_prepass.h  forward_pass.h  gtao_pass.h  lightmap_baker_pass.h  pos_normal_map_pass.h  probe_baker_pass.h  pt_push_constants.h  reference_view_pass.h  shadow_pass.h  skybox_pass.h  tonemapping_pass.h
passes/src/: ao_spatial_pass.cpp  ao_temporal_pass.cpp  contact_shadows_pass.cpp  depth_prepass.cpp  forward_pass.cpp  gtao_pass.cpp  lightmap_baker_pass.cpp  pos_normal_map_pass.cpp  probe_baker_pass.cpp  reference_view_pass.cpp  shadow_pass.cpp  skybox_pass.cpp  tonemapping_pass.cpp
rhi/: CMakeLists.txt
rhi/include/himalaya/rhi/: acceleration_structure.h  commands.h  context.h  descriptors.h  pipeline.h  resources.h  rt_pipeline.h  shader.h  swapchain.h  types.h
rhi/src/: acceleration_structure.cpp  commands.cpp  context.cpp  descriptors.cpp  pipeline.cpp  resources.cpp  rt_pipeline.cpp  shader.cpp  swapchain.cpp
scripts/: generate_poisson_disk.py  generate_sobol.py  sync-shaders.sh
shaders/: ao_spatial.comp  ao_temporal.comp  contact_shadows.comp  depth_prepass.frag  depth_prepass.vert  depth_prepass_masked.frag  forward.frag  forward.vert  fullscreen.vert  gtao.comp  shadow.vert  shadow_masked.frag  skybox.frag  skybox.vert  tonemapping.frag  triangle.frag  triangle.vert
shaders/bake/: pos_normal_map.frag  pos_normal_map.vert  probe_filter.comp
shaders/common/: bindings.glsl  brdf.glsl  constants.glsl  depth.glsl  lighting.glsl  noise.glsl  normal.glsl  probe_grid.glsl  shadow.glsl  transform.glsl
shaders/compress/: bc6h.comp
shaders/ibl/: brdf_lut.comp  equirect_to_cubemap.comp  ibl_common.glsl  irradiance.comp  prefilter.comp
shaders/rt/: anyhit.rahit  closesthit.rchit  lightmap_baker.rgen  miss.rmiss  probe_baker.rgen  pt_common.glsl  reference_view.rgen  shadow_miss.rmiss
tasks/: m1-phase1.md  m1-phase2.md  m1-phase3.md  m1-phase4.md  m1-phase5.md  m1-phase6.md  m1-phase7.md  m1-phase8.5.md  m1-phase8.md
tasks/archive/: m1-phase5.md  m1-phase6.md  m1-phase8.md
